--- a/styles/index.css
+++ b/styles/index.css
@@ -1,15 +1,15 @@
-.bingo-row {
-  display: flex;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  @apply font-sans bg-cool-grey-100;
 }
 
-.bingo-cell {
-  display: flex;
-  justify-content: center;
-  flex: 1;
-  height: auto;
-  align-items: center;
-  border: solid 1px black;
+h1 {
+  @apply text-3xl font-semibold mb-6;
 }
+
 .bingo-cell:before {
   content: '';
   float: left;
