--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  transition-duration: 0.2s;
+}
+
 body {
   @apply font-sans bg-cool-grey-100;
 }
